--- a/styles.css
+++ b/styles.css
@@ -48,5 +48,32 @@ ol {
 }
 
 .testimonial {
-    background-color: #
-        
+    background-color: #f9f9f9;
+    padding: 1rem;
+    border-radius: 5px;
+    margin-bottom: 1rem;
+}
+
+.client-name {
+    font-weight: bold;
+    font-style: italic;
+    margin-top: 0.5rem;
+}
+
+footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 1rem 0;
+    margin-top: 2rem;
+}
+
+a {
+    color: #0077cc;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #004999;
+    text-decoration: underline;
+}
